[workspace]
members = [
    "ports/cef",
    "ports/geckolib",
    "ports/servo",
]

[profile.dev]
codegen-units = 16

[profile.release]
codegen-units = 16
opt-level = 3
# Uncomment to profile on Linux:
# debug = true
# lto = false

[patch.crates-io]
# If you need to temporarily test Servo with a local fork of some upstream
# crate, add that here. Use the form:
#
#     <crate> = { path = "/path/to/local/checkout" }
#
# Or for a git dependency:
#
#     [patch."https://github.com/servo/<repository>"]
#     <crate> = { path = "/path/to/local/checkout" }
